--- a/css/custom.css
+++ b/css/custom.css
@@ -35,7 +35,21 @@ URL:            http://www.tabthemes.com/
     color:white;
 }
 
-.black-text{
+/* .black-text{
     color:black;
+} */
+
+/* .meet-me .img {
+    width: 100%;
+    position: relative;
 }
 
+.meet-me .overlay {
+    position: absolute;
+    top: 80px;
+    right: 15px;
+    font-weight: bold;
+    text-align: right;
+    font-size: 30px;
+  }
+ */
