--- a/css/style.css
+++ b/css/style.css
@@ -1088,6 +1088,10 @@ blockquote {
   font-size: 23px;
   line-height: 42px;
 }
+
+.service-icon:hover {
+  background-color: #F1EBDF;
+}
 .service h4 {
   text-transform: uppercase;
   margin-top: 35px;
