--- a/css/style.css
+++ b/css/style.css
@@ -1505,7 +1505,7 @@ blockquote {
 ---------------------------------------------------*/
 .testimonial {
   position: relative;
-  background-color: #DFD4C3;
+  /* background-color: #DFD4C3; */
   padding-top: 50px;
   padding-bottom: 50px;
 }
